--- a/style/style.css
+++ b/style/style.css
@@ -13,13 +13,16 @@
 
 ::-webkit-scrollbar-thumb{
     border-left: 2px rgba(76, 86, 98, 0.945) solid;
-    background-color:  rgba(59, 78, 84, 0.945);  
+    background-color:  rgba(0, 0, 0, 0.856);  
 }
 
 ::-webkit-scrollbar-thumb:hover{
     background-color:   rgba(76, 86, 98, 0.945); 
 }
 
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     overflow-x: hidden;
@@ -31,7 +34,7 @@ body{
     opacity: 1;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 2;
-    color: rgb(3,40,75);
+    color: black;
     position: fixed;
     background-color: white;
     border-bottom: 2px whitesmoke solid;
@@ -44,7 +47,7 @@ body{
     font-family: 'Architects Daughter', cursive;
     font-size: 3rem;
     font-weight: 100;
-    color: rgb(3,40,75);
+    color: black;
 }
 
 
@@ -54,6 +57,7 @@ body{
 }
 
 #TopOption button img{
+    cursor: pointer;
     border: none;
     background-color: transparent;
 }
@@ -73,7 +77,7 @@ body{
     font-weight: 600;
     font-size: large;
     font-weight: 700;
-    color: rgb(3,40,75);
+    color: black;
     border: 0;
     border-radius: 6px;
     outline: none;
@@ -91,17 +95,17 @@ body{
     font-weight: 600;
     font-size: large;
     font-weight: 700;
-    color: rgb(3,40,75);
+    color: black;
     background-color: white;
-    border:2px rgb(3,40,75) solid;
+    border:2px black solid;
     cursor: pointer;
     outline: none;
 }
 
 .logIn button:hover{
     color: white;
-    background-color:rgb(3,40,75);
-    border: 2px rgb(3,40,75) solid;
+    background-color:black;
+    border: 2px black solid;
 }
 
 .headspace {
@@ -115,7 +119,7 @@ body{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 2;
     opacity: 1;
-    color: rgb(3,40,75);
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     position: fixed;
     top: 10%;
@@ -167,9 +171,6 @@ body{
 }
 
 
-#main{
-}
-
 
 #back{
     background-repeat: no-repeat;
@@ -180,15 +181,15 @@ body{
 
 
 
+
 #flex-box{
     visibility: hidden;
-    box-shadow: 0px 0px 0px 2000px rgba(0,0,0,0.2);
     z-index: 2;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-size: 1.6rem;
     font-weight: 700;
-    color: rgb(3,40,75);
+    color: black;
     position: fixed;
     top: 15%;
     height: 89%;
@@ -208,18 +209,18 @@ body{
     font-size: 1.1rem;
     font-weight: 300;
     background-color: white;
-    color: rgb(3,40,75);
+    color: black;
     align-self: center;
     width: 70%;
     height: max-content;
     margin-top: 2rem;
-    border: 2px rgb(3,40,75) solid;
+    border: 2px black solid;
 }
 
 
 #flex-box div:hover{
     color: white;
-    background-color: rgb(3,40,75);
+    background-color: black;
     
 }
 
@@ -236,24 +237,41 @@ body{
 }
 
 
+#main{
+    display: flex;
+    overflow-y: hidden;
+    background-color: white;
+    flex-wrap: wrap;
+    flex-direction: column;
+    overflow-x: scroll;
+    margin: 10%;
+    margin-top: 0;
+    height: 80%;
+    width: 80%;
+    scroll-behavior: smooth;
+}
+
 
 
 #BookOfMonth{
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     font-weight: 200;
     text-align: center;
-    margin-top: 2%;
-    margin-left: 18% ;
-    margin-right: 20% ;
-    margin-bottom: 10%;
+    margin: 10%;
+    margin-top: 0;
+    margin-bottom: 0;
     padding: 2rem;
+    background-color: whitesmoke;
 }
 
 #books{
     margin-top: 1rem;
     display: flex;
-    background-color: rgba(3,30,45,0.8) ;
+    background-color: rgba(0, 0, 0, 0.801) ;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
@@ -262,7 +280,7 @@ body{
     width: 6rem;
     height: 6rem;
     background-color: white;
-    border: 3px rgba(3,30,45,0.8) solid;
+    border: 3px rgba(0, 0, 0, 0.801) solid;
 }
 
 
@@ -272,17 +290,68 @@ body{
     height: 6rem;
     border: 3px white solid;
     color: white;
-    background-color: rgba(3,30,45,0.8);
+    background-color: rgba(0,0,0,0.8);
 
 }
+
+
+#article{
+    text-align: center;
+    color: black;
+    margin: 10%;
+    height: fit-content;
+    width: 80%;
+}
+
+#article h1{
+    font-size: 3rem;
+    padding: 2rem;
+    font-style: oblique;
+    text-align: center;
+    font-weight: 500;
+    font-family: cursive;
+}
+
+#article div{
+    width: 100%;
+    height: 80%;
+}
+
+#article div h2{
+    font-size: xx-large;
+    padding: 1rem;
+    font-style: normal;
+    text-align: center;
+    font-weight: 200;
+    font-family:sans-serif;
+}
+
+
+#scrollup{
+    visibility: hidden;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: white;
+    border: 1;
+    border-radius: 100rem;
+}
+
+#scrollup a img{
+    cursor: pointer;
+    border: 0;
+    border-radius: 100rem;
+}
+
+
 
                                          /*footer of page*/
 
 .footer{
     text-align: center;
     font-size: 0.7rem;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(12, 53, 63, 0.9); 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgba(19, 18, 18, 0.952); 
     color:white;
     padding: 8px ; 
     margin-bottom: 0;
@@ -290,9 +359,9 @@ body{
 }
 
 .footer button{
-    border:2px rgb(3,40,75) solid;
+    border:2px black solid;
     background-color: white;
-    color: rgb(3,40,75);
+    color: black;
     font-size:large;
     font-weight: 300;
     margin: 0;
@@ -301,7 +370,7 @@ body{
 
 
 .footer button:hover{
-    background-color: rgb(3,40,75);
+    background-color: black;
     color: white;
     border:2px white solid;
 }
@@ -319,7 +388,7 @@ body{
     font: 500;
     font-size: 1rem;
     padding-left: 1rem;
-    color: rgb(3,40,75);
+    color: black;
 }
 
 .footer h3 {
@@ -330,4 +399,31 @@ body{
 .footer span a{
     color: white;
     text-decoration: none;
+}
+
+.footer div table{
+    margin: 5%;
+    width: 80%;
+    height:10% ;
+    margin-top: 0;
+    margin-bottom: 0;
+
+}
+
+.footer div table tr td{
+    text-align: center;
+    width: 30%;
+}
+
+#footerTable table tr td{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: white;
+}
+
+#footerTable table tr td a{
+    margin: 0px;
+    text-decoration: none;
+    color: white;
 }
